Update test cases.